# pHapCompass

./: .gitignore  MANIFEST.in  README.md  compare_hpop.py  compare_whatshapp.py  convertor.py  environment.yaml  environment.yml  evaluations.py  extractSNV.py  generate_simulated_graphs.py  generate_transition_matrices.py  main.py  plots.py  pyproject.toml  read_input.py  recovered_FFBS.py  recovered_SMBP.py  recovered_experiments.py  recovered_plots.py  recovered_results.py  recovered_utils.py  requirements.txt  results.py  run_pHapCompass_long.py  run_pHapCompass_short.py  setup.py  test.py  uncertainty_quantification_long.py  uncertainty_quantification_short.py
FFBS/: FFBS.py  FFBS_quotient_graph.py  candidate_phasing.py  haplotypes.csv  test_FFBS2.py  test_FFBS_chordal_graph.py  test_FFBS_quotient_graph.py  torch_model_utils.py
Simulator/: simulator.py  simulator_paper.py
algorithm/: FFBS.py  IndependentTorchMatrixBeliefPropagator.py  SMBP.py  chordal_contraction.py  haplotype_assembly.py  haplotype_assembly_helper.py  inference.py  sparse_matrix_bp.py  viterbi.py  wSMBP.py
comp_methods/: compare_hpop.py  compare_whatshapp.py
data/: configuration.py  data_manager.py  input_handler.py
evaluation/: comparisons.py  evaluation.py  metrics.py
example/: temp_hairs.txt  temp_hairs2.txt  test.txt
experminets/: SMBP_exp.py  SMBP_nofrag.py  SMBP_sample_accuracy.py  SMBP_toy.py  experiments.py  experiments.py.bak  generate_chordal_graph.py  generate_chordal_graph.py.lprof  generate_pHapcompass_graph.py  profiling_output.txt  run_sassafras.py  wSMBP_results.py  (+4 more)
(+65 files in other folders)
